syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "CommHeroUpgradeStarResponseProtobuf";

message	CommHeroUpgradeStarResponse  {
	optional	uint32	result = 10;
	optional	CommHeroUpgradeStarRequest	request = 11;
	repeated	PlayerItem	items = 12;
	repeated	PlayerItem	archives = 13;
}